--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /C# 高级/1.泛型/Generic/.vs
-/C# 高级/1.泛型/Generic/bin
-/C# 高级/1.泛型/Generic/obj
+/C# 高级/1.泛型/Generic/Generic/bin
+/C# 高级/1.泛型/Generic/Generic/obj
