反射增加练习

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@
 /C# 高级/2.反射/Reflection/DB.Oracle/obj
 /C# 高级/2.反射/Reflection/DB.SqlServer/bin
 /C# 高级/2.反射/Reflection/DB.SqlServer/obj
+/C# 高级/2.反射/Work/.vs
+/C# 高级/2.反射/Work/DAL/bin
+/C# 高级/2.反射/Work/DAL/obj
+/C# 高级/2.反射/Work/IDAL/bin
+/C# 高级/2.反射/Work/IDAL/obj
+/C# 高级/2.反射/Work/Model/obj
+/C# 高级/2.反射/Work/Model/bin
+/C# 高级/2.反射/Work/Work/bin
+/C# 高级/2.反射/Work/Work/obj
