增加面向对象代码

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /C# 高级/2.反射/Work/Model/bin
 /C# 高级/2.反射/Work/Work/bin
 /C# 高级/2.反射/Work/Work/obj
+/C# 高级/3.面向对象/MyOO/.vs
+/C# 高级/3.面向对象/MyOO/MyOO/bin
+/C# 高级/3.面向对象/MyOO/MyOO/obj
