--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 /C# 高级/3.面向对象/MyOO/.vs
 /C# 高级/3.面向对象/MyOO/MyOO/bin
 /C# 高级/3.面向对象/MyOO/MyOO/obj
+/C# 高级/4.特性/Attribute/.cr
+/C# 高级/4.特性/Attribute/.vs
+/C# 高级/4.特性/Attribute/Attribute/bin
+/C# 高级/4.特性/Attribute/Attribute/obj
