增加委托代码和笔记

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /C# 高级/4.特性/Attribute/.vs
 /C# 高级/4.特性/Attribute/Attribute/bin
 /C# 高级/4.特性/Attribute/Attribute/obj
+/C# 高级/5.委托/Delegate/.vs
+/C# 高级/5.委托/Delegate/Delegate/bin
+/C# 高级/5.委托/Delegate/Delegate/obj
