--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@
 /C# 高级/5.委托/Delegate/.vs
 /C# 高级/5.委托/Delegate/Delegate/bin
 /C# 高级/5.委托/Delegate/Delegate/obj
+/C# 高级/6.事件/MyEvent/.vs
+/C# 高级/6.事件/MyEvent/MyEvent/bin
+/C# 高级/6.事件/MyEvent/MyEvent/obj
+/C# 高级/7.Lambda表达式/MyLamdba/.vs
+/C# 高级/7.Lambda表达式/MyLamdba/MyLamdba/bin
+/C# 高级/7.Lambda表达式/MyLamdba/MyLamdba/obj
