--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@
 /C# 高级/7.Lambda表达式/MyLamdba/.vs
 /C# 高级/7.Lambda表达式/MyLamdba/MyLamdba/bin
 /C# 高级/7.Lambda表达式/MyLamdba/MyLamdba/obj
+/C# 高级/8.Linq/MyLinq/.vs
+/C# 高级/8.Linq/MyLinq/MyLinq/bin
+/C# 高级/8.Linq/MyLinq/MyLinq/obj
