增加设计模式代码

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@
 /C# 高级/8.Linq/MyLinq/.vs
 /C# 高级/8.Linq/MyLinq/MyLinq/bin
 /C# 高级/8.Linq/MyLinq/MyLinq/obj
+/C# 高级/9.设计模式/DesignPatternPrinciple/.vs
+/C# 高级/9.设计模式/DesignPatternPrinciple/DesignPatternPrinciple/bin
+/C# 高级/9.设计模式/DesignPatternPrinciple/DesignPatternPrinciple/obj
