增加序列化反序列化

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@
 /C# 高级/10.Express表达式/MyExpress/.vs
 /C# 高级/10.Express表达式/MyExpress/MyExpress/bin
 /C# 高级/10.Express表达式/MyExpress/MyExpress/obj
+/C# 高级/11.IO和序列化/IOSerialize/.vs
+/C# 高级/11.IO和序列化/IOSerialize/IOSerialize/bin
+/C# 高级/11.IO和序列化/IOSerialize/IOSerialize/obj
