--- a/C# 高级/11.IO和序列化/IOSerialize/IOSerialize/IOSerialize.csproj
+++ b/C# 高级/11.IO和序列化/IOSerialize/IOSerialize/IOSerialize.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
