增加加密解密代码

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@
 /C# 高级/11.IO和序列化/IOSerialize/.vs
 /C# 高级/11.IO和序列化/IOSerialize/IOSerialize/bin
 /C# 高级/11.IO和序列化/IOSerialize/IOSerialize/obj
+/C# 高级/12.加密解密/MyEncrypt/.cr
+/C# 高级/12.加密解密/MyEncrypt/.vs
+/C# 高级/12.加密解密/MyEncrypt/MyEncrypt/bin
+/C# 高级/12.加密解密/MyEncrypt/MyEncrypt/obj
