--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,9 @@
 /C# 高级/8.Linq/MyLinq/.vs
 /C# 高级/8.Linq/MyLinq/MyLinq/bin
 /C# 高级/8.Linq/MyLinq/MyLinq/obj
-/C# 高级/9.设计模式/DesignPatternPrinciple/.vs
-/C# 高级/9.设计模式/DesignPatternPrinciple/DesignPatternPrinciple/bin
-/C# 高级/9.设计模式/DesignPatternPrinciple/DesignPatternPrinciple/obj
+/C# 高级/9.设计模式原则/DesignPatternPrinciple/.vs
+/C# 高级/9.设计模式原则/DesignPatternPrinciple/DesignPatternPrinciple/bin
+/C# 高级/9.设计模式原则/DesignPatternPrinciple/DesignPatternPrinciple/obj
 /C# 高级/10.Express表达式/MyExpress/.vs
 /C# 高级/10.Express表达式/MyExpress/MyExpress/bin
 /C# 高级/10.Express表达式/MyExpress/MyExpress/obj
