增加多线程

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@
 /C# 高级/14.AOP面向切片编程/AOP/.vs
 /C# 高级/14.AOP面向切片编程/AOP/AOP/bin
 /C# 高级/14.AOP面向切片编程/AOP/AOP/obj
+/C# 高级/15.多线程/AsyncThread/.cr
+/C# 高级/15.多线程/AsyncThread/.vs
+/C# 高级/15.多线程/AsyncThread/AsyncThread/bin
+/C# 高级/15.多线程/AsyncThread/AsyncThread/obj
