--- a/工作流系统/Workflow_Back/Workflow_Back/Workflow_Back.csproj
+++ b/工作流系统/Workflow_Back/Workflow_Back/Workflow_Back.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="JadeFramework.Dapper" Version="2.0.0" />
     <PackageReference Include="JadeFramework.WorkFlow" Version="2.0.0.1" />
+    <PackageReference Include="MySql.Data" Version="9.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
